Let browsers know it's a dark theme (fixes Chromium scrollbars)

--- a/src/dark.css
+++ b/src/dark.css
@@ -1,6 +1,10 @@
 @namespace url(http://www.w3.org/1999/xhtml);
 /* Background */
 
+:root {
+	color-scheme: dark;
+}
+
 body {
 	background-color:#090a0d!important;
 	color:#AAA!important;
